--- a/index.html
+++ b/index.html
@@ -5,36 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    -->
+
     <title>Frontend Mentor | Product preview card component</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution { font-size: 11px; text-align: center; }
-      .attribution a { color: hsl(228, 45%, 44%); }
-    </style>
+
   </head>
   <body>
 
-    <section>
+    <section class="back">
 
       <div class="card">
 
-        <img src="images/image-product-mobile.jpg" alt="Perfume-chanel">
+        <img src="images/image-product-mobile.jpg" alt="Perfume-chanel" id="perfum">
 
         <div class="container">
 
-          <h3>PERFUME</h3>
+          <h3>P E R F U M E</h3>
           <h1>Gabrielle Essence Eau De Parfum</h1>
 
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
             <div class="price">
-              <h2>$149.99</h2>
-                <p>$169.99</p>
+              <h1 id="big-price">$149.99</h1>
+                <del>
+                  <p id="canceled-price">$169.99</p>
+                </del>
             </div>
 
-            <button type="submit">
+            <button type="submit" class="buy-button">
               <img src="images/icon-cart.svg" alt="SuperMarket-cart-icon">
               <p>Add to Cart</p>
             </button>
@@ -47,7 +50,7 @@
   
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Lucas Perez Bonato</a>.
     </div>
   </body>
 </html>
