Full implementing media query

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 
     <title>Frontend Mentor | Product preview card component</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-query.css">
 
   </head>
   <body>
 
-    <section class="back">
+    <section class="flex">
 
       <div class="card">
 
-        <img src="images/image-product-mobile.jpg" alt="Perfume-chanel" id="perfum">
+        <img src="images/image-product-desktop.jpg" alt="" id="desktop">
+        <img src="images/image-product-mobile.jpg" alt="Perfume-chanel" id="mobile">
 
         <div class="container">
 
